Missing header Includes when MOZ_BUNDLED_FONTS is set
Categories
(Core :: Graphics: Text, defect)
Tracking
()
People
(Reporter: sysrqb, Assigned: sysrqb)
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr91+
|
Details | Review |
Bug 1707655 moved some code around, unfortunately it seems some headers were missed - presumably because the code changes weren't tested with MOZ_BUNDLED_FONTS
.
We need nsDirectoryServiceDefs.h
for NS_GRE_DIR
, and mozilla/Telemetry.h
for the Telemetry::
usage.
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Comment 2•4 years ago
|
||
Build errors, for clarity.
12:49.01 /home/sysrqb/gecko-dev/gfx/thebes/gfxPlatformMac.cpp:116:40: error: use of undeclared identifier 'NS_GRE_DIR'
12:49.01 if (NS_FAILED(NS_GetSpecialDirectory(NS_GRE_DIR, getter_AddRefs(localDir)))) {
12:49.01 ^
12:49.08 /home/sysrqb/gecko-dev/gfx/thebes/gfxPlatformMac.cpp:202:7: error: use of undeclared identifier 'Telemetry'
12:49.09 Telemetry::Accumulate(Telemetry::FONTLIST_BUNDLEDFONTS_ACTIVATE,
12:49.09 ^
12:49.16 /home/sysrqb/gecko-dev/gfx/thebes/gfxPlatformMac.cpp:202:29: error: use of undeclared identifier 'Telemetry'
12:49.16 Telemetry::Accumulate(Telemetry::FONTLIST_BUNDLEDFONTS_ACTIVATE,
12:49.16 ^
12:49.16 /home/sysrqb/gecko-dev/gfx/thebes/gfxPlatformMac.cpp:202:70: error: expected ')'
12:49.16 Telemetry::Accumulate(Telemetry::FONTLIST_BUNDLEDFONTS_ACTIVATE,
12:49.16 ^
12:49.16 /home/sysrqb/gecko-dev/gfx/thebes/gfxPlatformMac.cpp:202:28: note: to match this '('
12:49.16 Telemetry::Accumulate(Telemetry::FONTLIST_BUNDLEDFONTS_ACTIVATE,
Comment 3•4 years ago
|
||
The severity field is not set for this bug.
:lsalzman, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 4•4 years ago
|
||
Matthew, are you going to try to land this patch?
Assignee | ||
Comment 5•4 years ago
|
||
(In reply to Lee Salzman [:lsalzman] from comment #4)
Matthew, are you going to try to land this patch?
Hi Lee, yes, but I'm not certain how (I think you stopped using the checkin-needed keyword, right?). I didn't see how to request landing in the phab docs, either.
Comment 8•4 years ago
|
||
bugherder |
Comment 9•4 years ago
|
||
Jonathan: Could we get that uplifted to ESR 91, too? Seems to be not too invasive while fixing compilation breakage and allows us to ship a patch less in our stack.
Comment 10•4 years ago
|
||
Seems entirely reasonable to me; I'll nominate it.
Comment 11•4 years ago
|
||
Comment on attachment 9243274 [details]
Bug 1732360 - Add headers needed by MOZ_BUNDLED_FONTS. r?jfkthame
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Fixes compilation breakage for consumers (eg. Tor) using the MOZ_BUNDLED_FONTS option.
- User impact if declined: Anyone building with MOZ_BUNDLED_FONTS on Mac has to patch locally.
- Fix Landed on Version: 95
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): No effect unless MOZ_BUNDLED_FONTS is enabled on Mac; no code change, just adds missing headers to fix inadvertent compilation breakage.
Comment 12•4 years ago
|
||
Comment on attachment 9243274 [details]
Bug 1732360 - Add headers needed by MOZ_BUNDLED_FONTS. r?jfkthame
Approved for 91.5esr.
Comment 13•4 years ago
|
||
bugherder uplift |
Description
•