Bug 1732360 - Add headers needed by MOZ_BUNDLED_FONTS. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D126817