gfx/thebes/gfxPlatformMac.cpp
@@ -29,6 +29,11 @@
 #include "GeckoProfiler.h"
 #include "nsThreadUtils.h"
 
+#ifdef MOZ_BUNDLED_FONTS
+#  include "mozilla/Telemetry.h"
+#  include "nsDirectoryServiceDefs.h"
+#endif
+
 #include <dlfcn.h>
 #include <CoreVideo/CoreVideo.h>
 
